--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@
 /.vs/workshop/v17/.suo
 /.vs/workshop/v17/TestStore/0/000.testlog
 /.vs/workshop/v17/TestStore/0/testlog.manifest
+/packages/*
+*/bin/*
+*/obj/*
+*/.vs/*
